Changes for NuGet

--- a/README
+++ b/README
@@ -12,3 +12,4 @@ The following will be added
   * Console application example project
 
 API documentation can be found here: http://developer.github.com/
+NuGet package can be found here: https://nuget.org/packages/CSharp.GitHub
